--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -150,3 +150,23 @@ header p {
     transform: translateY(-20px);
   }
 }
+.cover{
+	width: 100%;
+	height: 200px;
+	top: 0;
+	left: 0;
+	position: absolute;
+	background: #ec008c;
+	background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
+	background: linear-gradient(to right, #fc6767, #ec008c);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding: 0 2%;
+	color: white;
+}
+.cover-title{
+	display: flex;
+	justify-content: flex-start;
+}
+
