--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,8 +1,9 @@
-header
+header.d-flex.justify-content-between
 	p Feres News
+	p= link_to "SignOut", destroy_user_session_path, method: :delete
 
 .topBar
-	h3.thin= @isMorning ? "Good Morning, Bruno" : "Good Afternoom, Bruno"
+	h3.thin= @isMorning ? "Good Morning, #{current_user.name}" : "Good Afternoom, Bruno"
 	input.search type="text" placeholder="Search News"
 .categories
 	= link_to sports_path do 
