--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -62,4 +62,15 @@ css:
     color: #ec008c;
     text-decoration: none;
   }
-
+  @media only screen and (max-width: 600px) {
+    .signup{
+      background: white;
+      width: 80%;
+      height: 450px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-top: 15%;
+    }
+  }
