Organizing Style Files

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -27,8 +27,9 @@ css:
   .signup{
     background: white;
     width: 20%;
-    height: 400px;
+    height: auto;
     border-radius: 10px;
+    padding: 2% 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,6 +63,11 @@ css:
     color: #ec008c;
     text-decoration: none;
   }
+  #error_explanation p{
+    margin: 0;
+    color: #ec008c;
+  }
+
   @media only screen and (max-width: 600px) {
     .signup{
       background: white;
