--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,63 +9,63 @@ input.search-mobile type="text" placeholder="Search News"
 .categories-mobile
 	.row
 		.col-6.mb-4
-			= link_to sports_path do 
+			= link_to "/category/sports" do 
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/volleyball-2.png"
 		.col-6.mb-4
-			= link_to business_path do 
+			= link_to "/category/business" do
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/business.png"
 		.col-6.mb-4
-			= link_to health_path do 
+			= link_to "/category/health" do
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/like.png"
 		.col-6.mb-4
-			= link_to entertainment_path do 
+			= link_to "/category/entertainment" do
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/clapperboard.png"
 		.col-6.mb-4
-			= link_to science_path do 
+			= link_to "/category/science" do 
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/physics.png"
 		.col-6.mb-4
-			= link_to technology_path do 
+			= link_to "/category/technology" do 
 				.category.mr-4.ml-4
 					center
 						img src="https://img.icons8.com/ios/60/FFFFFF/mouse.png"
 
 .categories
-	= link_to sports_path do 
+	= link_to "/category/sports" do 
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/volleyball-2.png"
 		p.text-center Sports
-	= link_to business_path do 
+	= link_to "/category/business" do 
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/business.png"
 		p.text-center Business
-	= link_to health_path do 
+	= link_to "/category/health" do 
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/like.png"
 		p.text-center Health
-	= link_to entertainment_path do 
+	= link_to "/category/entertainment" do 
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/clapperboard.png"
 		p.text-center Entertainment
-	= link_to science_path do 
+	= link_to "/category/science" do
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/physics.png"
 		p.text-center Science
-	= link_to technology_path do 
+	= link_to "/category/technology" do 
 		.category.mr-4.ml-4
 			center
 				img src="https://img.icons8.com/ios/60/FFFFFF/mouse.png"
