--- a/app/views/news/category.html.slim
+++ b/app/views/news/category.html.slim
@@ -1,8 +1,8 @@
-.cover
+.cover.animated.fadeInDownBig
 	.cover-title
 		h1= @categoryName
 .news
-	.articles
+	.articles.animated.fadeInUpBig
 		center
 			.row
 				- @news.each do |news|
