--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -174,3 +174,23 @@ header a:hover{
 	display: flex;
 	justify-content: flex-start;
 }
+footer{
+	width: 100%;
+	backdrop-filter: blur(5px);
+  	-webkit-backdrop-filter: blur(10px);
+  	-moz-backdrop-filter: blur(10px);
+  	-ms-backdrop-filter: blur(10px);
+  	-o-backdrop-filter: blur(10px);
+	background: rgba(255,255,255,0.7);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 30px;
+	padding: 0 4%;
+	z-index: 999;
+}
+footer p{
+	text-align: center;
+	line-height: 30px;
+	color: #333
+}
