--- a/app/assets/stylesheets/Feres_News_Dark_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Dark_Theme.css
@@ -22,3 +22,9 @@
 	background-color: #000;
 	color: white;
 }
+.darkBody footer{
+	background-color: rgba(0,0,0,0.7) !important;
+}
+.darkBody footer p {
+	color: white !important;	
+}
