--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -194,3 +194,35 @@ footer p{
 	line-height: 30px;
 	color: #333
 }
+.AboutFeresNews{
+	position: fixed;
+	z-index: 9999999;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	backdrop-filter: blur(13px);
+  	-webkit-backdrop-filter: blur(13px);
+  	-moz-backdrop-filter: blur(13px);
+  	-ms-backdrop-filter: blur(13px);
+  	-o-backdrop-filter: blur(13px);
+	background: rgba(255,255,255,0.6);
+}
+.AboutFeresNews .header{
+	width: 100%;
+	padding: 3%;
+}
+.AboutFeresNews .row{
+	width: 100%;
+	margin: 0 3%;
+}
+.AboutFeresNews .about-box{
+	background-color: rgba(255,255,255,0.99);
+	height: 650px;
+	width: 80%;
+	border-radius: 10px;
+	box-shadow: 1px 2px 10px 5px rgba(0,0,0,0.1)
+}
+#bruno{
+	border-radius: 10px;
+}
