--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,7 +2,7 @@ header.d-flex.justify-content-between.animated.slideInDown
 	p Feres News
 	.d-flex.justify-content-end
 		p#signOut= link_to "SignOut", destroy_user_session_path, method: :delete
-		p.ml-5#about style="cursor: pointer"
+		/p.ml-5#about style="cursor: pointer"
 			img src="https://img.icons8.com/ios/25/EC008C/info.png"
 
 .topBar
