--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -63,7 +63,8 @@ input.search-mobile.animated.fadeInRightBig type="text" placeholder="Search News
 
 javascript:
 	$(document).ready(function(){
-		home = new Home()
+		const base_url = "#{Rails.env}" == "development" ? "http://localhost:3000" : "http://feres-news.com"
+		home = new Home(base_url)
 		home.loaded()
 		$(".search").change(function(){
 			home.search( $(".search").val() )
