Improving Style and Showing more News in Home

--- a/app/assets/stylesheets/Feres_News_Dark_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Dark_Theme.css
@@ -1,5 +1,5 @@
 .darkBody{
-	background-color: #111;
+	background-color: var(--dark-mode-background);
 	color: white;
 }
 .darkBody .categories a, .darkBody .categories-mobile a {
