--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html
     - if alert
       p.alert= alert
     = yield
-    footer
+    /footer
       p Made with ❤️ in Brazil
 css:
   .alert, .notice {
