--- a/app/views/news/category.html.slim
+++ b/app/views/news/category.html.slim
@@ -14,7 +14,7 @@
 									p.title= news['title']
 							div
 								a href="#{news['url']}" target="blank"
-									button.read Read
+									button.read= translate 'home.read'
 css:
 	.news{
 		margin-top: 170px !important;
