--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -52,8 +52,7 @@ input.search-mobile.animated.fadeInRightBig type="text" placeholder="#{translate
 
 javascript:
 	$(document).ready(function(){
-		const base_url = "#{Rails.env}" == "development" ? "http://localhost:3000" : "http://feres-news.com"
-		home = new Home(base_url)
+		home = new Home()
 		home.loaded()
 		$(".search").change(function(){
 			home.search( $(".search").val() )
@@ -76,5 +75,3 @@ javascript:
 			}, 800);
 		})
 	})
-
-
