--- a/app/assets/stylesheets/Feres_News_Mobile_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Mobile_Theme.css
@@ -34,4 +34,43 @@
 		margin: 0 2.5% 4% 2.5%;
 		padding: 2%
 	}
+	#myFrame{
+		position: fixed;
+		z-index: 999999;
+		bottom: 0;
+		height: 100%;
+		left: 0;
+		width: 100%;
+		border: none;
+	}
+	.myFrameBlurredBackground{
+		background: rgba(255,255,255,0);
+	  	-webkit-backdrop-filter: blur(5px);
+	  	-moz-backdrop-filter: blur(5px);
+	  	-ms-backdrop-filter: blur(5px);
+	  	-o-backdrop-filter: blur(5px);
+	}
+	#myFrame .frameHeader{
+		display: flex;
+		justify-content: space-between;
+		position: absolute;
+		padding: 0.25% 1%;
+		bottom: 95%;
+		left: 0 !important;
+		width: 100% !important;
+		height: 5% !important;
+		background: #fff;
+		border-top-left-radius: 0 !important;
+		border-top-right-radius: 0 !important;
+		border: 1px solid rgba(0,0,0,0.1);
+	}
+	#myFrame iframe{
+		position: absolute;
+		bottom: 0;
+		left: 0 !important;
+		width: 100% !important;
+		height: 95%;
+		border: none;
+	}
 }
+
