--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -194,6 +194,44 @@ footer p{
 	line-height: 30px;
 	color: #333
 }
+#myFrame{
+	position: fixed;
+	z-index: 999999;
+	bottom: 0;
+	height: 100%;
+	left: 0;
+	width: 100%;
+	border: none;
+}
+.myFrameBlurredBackground{
+	background: rgba(255,255,255,0);
+  	-webkit-backdrop-filter: blur(5px);
+  	-moz-backdrop-filter: blur(5px);
+  	-ms-backdrop-filter: blur(5px);
+  	-o-backdrop-filter: blur(5px);
+}
+#myFrame .frameHeader{
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	padding: 0.25% 1%;
+	bottom: 95%;
+	left: 25%;
+	width: 50%;
+	height: 4%;
+	background: #fff;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	border: 1px solid rgba(0,0,0,0.1);
+}
+#myFrame iframe{
+	position: absolute;
+	bottom: 0;
+	left: 25%;
+	width: 50%;
+	height: 95%;
+	border: none;
+}
 .AboutFeresNews{
 	position: fixed;
 	z-index: 9999999;
@@ -226,16 +264,6 @@ footer p{
 #bruno{
 	border-radius: 10px;
 }
-.magic-navigator{
-  background: rgba(255,255,255, .4);
-  position: fixed;
-  width: 20%;
-  height: 100%;
-  top: 2%;
-  left: 0;
-  backdrop-filter: blur(13px);
-  -webkit-backdrop-filter: blur(13px);
-  -moz-backdrop-filter: blur(13px);
-  -ms-backdrop-filter: blur(13px);
-  -o-backdrop-filter: blur(13px);    
+.pointer{
+	cursor: pointer;
 }
