--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -33,17 +33,17 @@ header{
   	-moz-backdrop-filter: blur(10px);
   	-ms-backdrop-filter: blur(10px);
   	-o-backdrop-filter: blur(10px);
-	background: rgba(255,255,255,0.7);
-	position: fixed;
+	background: rgba(255,255,255,.1);
+	position: absolute;
 	top: 0;
 	left: 0;
-	height: 40px;
+	height: 50px;
 	padding: 0 4%;
 	z-index: 999;
 }
 header p {
- 	font-size: 1.3em;
- 	line-height: 40px;
+ 	font-size: 1em;
+ 	line-height: 50px;
  	font-family: sans-serif;
  	color: var(--secondary);
 }
