Some UI Improvement

--- a/app/assets/stylesheets/Feres_News_Mobile_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Mobile_Theme.css
@@ -28,6 +28,10 @@
 	.categories-mobile{
 		display: block;
 	}
+	.categories-mobile .category p{
+		color: white;
+		text-decoration: none;
+	}
 	.search-mobile{
 		display: block;
 		width: 95%;
