--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -7,23 +7,30 @@ body{
 .thin{ font-weight: 200 }
 /* Categories Styles .  .  .  .  .  .  .  .  .  .  .  . */
 .categories{
-	display: flex;
-	justify-content: flex-start;
 	padding: 0 4%;
+	width: 100%;
 }
 .categories a{
 	text-decoration: none;
 	color: #333;
-	font-weight: 200;
+	font-weight: 200;	
 }
 .category{
-	width: 100px;
+	width: 100%;
 	height: 100px;
-	padding: 20px 0;
-	border-radius: 50%;
+	padding: 10px 15px;
+	border-radius: 10px;
 	background: var(--secondary);
 	background: -webkit-linear-gradient(to right, var(--primary), var(--secondary));
 	background: linear-gradient(to right, var(--primary), var(--secondary));
+	box-shadow: 1px 5px 15px 3px var(--primary)
+}
+.category:hover{
+	box-shadow: 1px 5px 15px 1px var(--primary)	
+}
+.category h4{
+	color: white;
+	font-weight: 200;
 }
 /* Header Styles .  .  .  .  .  .  .  .  .  .  .  */
 header{
@@ -103,6 +110,10 @@ header a:hover{
   	width: 50%;
   	margin: 0 25%;
   	cursor: pointer;
+  	box-shadow: 1px 5px 15px 3px var(--primary)
+}
+.read:hover{
+	box-shadow: 1px 5px 15px 1px var(--primary)	
 }
 /* Home Styles .  .  .  .  .  .  .  .  .  .  .  . */
 .topBar{
@@ -169,6 +180,7 @@ header a:hover{
 	justify-content: flex-end;
 	padding: 0 2%;
 	color: white;
+	box-shadow: 1px 5px 15px 3px var(--primary)
 }
 .cover-title{
 	display: flex;
