--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -29,7 +29,7 @@ input.search-mobile.animated.fadeInRightBig type="text" placeholder="#{translate
 .news.mt-5.mb-5
 	.horizontal-bar
 		h3.text-black.thin.mb-2.animated.fadeInLeftBig= translate 'home.title'
-		p.text-primary.thin.mb-2.animated.fadeInRightBig Ver Todas
+		p.text-primary.thin.mb-2.animated.fadeInRightBig= link_to "Ver Todas", news_path
 	.articles
 		center
 			.row
