A Entirely New Gorgeous Auth Screens

--- a/app/assets/stylesheets/Feres_News_Dark_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Dark_Theme.css
@@ -34,3 +34,9 @@
 .darkBody .magic-navigator{
 	background: rgba(0,0,0,.7);
 }
+.darkBody .Auth{
+	background: #111;
+}
+.darkBody .Auth .box{
+	box-shadow: 0 0 10px 5px transparent;
+}
