--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
-center
-  .signup
+.Auth
+  .box
     h2.text-center SignUp
     .mt-3
     center
@@ -19,64 +19,63 @@ center
           = render "devise/shared/links"
 
 css:
-  body{
+  .Auth {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  .Auth .box{
     background: #ec008c;
     background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
     background: linear-gradient(to right, #fc6767, #ec008c);
-  }
-  .signup{
-    background: white;
+    box-shadow: 1px 1px 25px 3px var(--primary);
     width: 20%;
-    height: auto;
-    border-radius: 10px;
-    padding: 2% 0;
+    height: 55%;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: white;
   }
-  .signup h2{
-    font-weight: 200;
-  }
-  input[type="email"],input[type="password"],input[type="text"]{
-    background: #f2f2f2;
-    width: 90%;
-    margin: 3% 5%;
+  .Auth .box input[type="email"], .Auth .box input[type="password"], .Auth .box input[type="text"]{
     border: none;
-    border-radius: 10px;
-    padding: 2% 2%;
-    color: #333;
-  }
-  input[type="submit"]{
-    display: inline-block;
-    background: #ec008c;
-    background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
-    background: linear-gradient(to right, #fc6767, #ec008c);
-    color: #fff;
-    padding: 2% 0;
+    width: 80%;
+    height: 40px;
+    margin: 3% 0;
+    padding: 2% 4%; 
     border-radius: 20px;
+  }
+  .Auth .box input[type="submit"]{
     border: none;
-    width: 50%;
-    margin: 0 25%;
-    cursor: pointer;
+    width: 80%;
+    height: 40px;
+    margin: 3% 0;
+    padding: 2% 4%; 
+    border-radius: 20px;
+    background: white;
+    color: var(--primary)
   }
-  .signup a {
-    color: #ec008c;
-    text-decoration: none;
+  .Auth .box a{
+    color: white;
   }
-  #error_explanation p{
-    margin: 0;
-    color: #ec008c;
-  }
-
   @media only screen and (max-width: 600px) {
-    .signup{
-      background: white;
+    .Auth .box{
+      background: #ec008c;
+      background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
+      background: linear-gradient(to right, #fc6767, #ec008c);
+      box-shadow: 1px 1px 25px 3px var(--primary);
       width: 80%;
-      height: 450px;
-      border-radius: 10px;
+      height: 65%;
+      border-radius: 20px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin-top: 15%;
+      color: white;
     }
   }
